Fixed iOS issue (remove webkit-backface-visibility)

--- a/css/screen.css
+++ b/css/screen.css
@@ -38,7 +38,6 @@ section {
     -webkit-transform-style: preserve-3d;
     -webkit-transition: -webkit-transform 1s ease-in;
     -webkit-transform: rotateY(0deg);
-		-webkit-backface-visibility: hidden;
     -webkit-transform-origin: 0 0;
     -webkit-transition-property: -webkit-transform, -webkit-transform-origin;
 }
@@ -49,14 +48,20 @@ section {
     -webkit-transform-style: preserve-3d;
     -webkit-transition: -webkit-transform 1s ease-out;
     -webkit-transform: rotateY(-90deg);
-		-webkit-backface-visibility: hidden;
     -webkit-transform-origin: 0 0;
     -webkit-transition-property: -webkit-transform, -webkit-transform-origin;
 }
 
 #secondinnerpage {
   z-index: 1;
-  
+}
+
+#secondinnerpage p {
+  margin-bottom: 1em;
+}
+
+#secondinnerpage h3 {
+  margin-bottom: 1em;
 }
 
 #frontpage h1 {font-size:4em; font-weight:bold;}
